force-app/main/default/objects/SurveyProduct__c/SurveyProduct__c.object-meta.xml
<CustomObject>
    <label>Produto da Pesquisa</label>
    <nameField>
        <displayFormat>PP-{00000000}</displayFormat>
        <label>Nome de Produto da Pesquisa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Produtos da Pesquisa</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>