force-app/main/default/objects/SurveyProduct__c/fields/MaterialGroupFml__c.field-meta.xml
<CustomField>
    <fullName>MaterialGroupFml__c</fullName>
    <formula>IF(TEXT(ProductLkp__r.MaterialGroup__c) != null,
   CASE(
      TEXT(ProductLkp__r.MaterialGroup__c),
      &quot;01&quot;, &quot;Tubos&quot;, 
      &quot;02&quot;, &quot;Conexões&quot;,
      &quot;03&quot;, &quot;Acessórios&quot;, 
      &quot;04&quot;, &quot;Revenda&quot;, 
      &quot;05&quot;, &quot;Metálicos&quot;, 
      &quot;06&quot;, &quot;Reservatórios&quot;, 
      null
   ),
   CASE(
      TEXT(OtherMaterialGroupTxt__c),
      &quot;01&quot;, &quot;Tubos&quot;, 
      &quot;02&quot;, &quot;Conexões&quot;,
      &quot;03&quot;, &quot;Acessórios&quot;, 
      &quot;04&quot;, &quot;Revenda&quot;, 
      &quot;05&quot;, &quot;Metálicos&quot;, 
      &quot;06&quot;, &quot;Reservatórios&quot;, 
      null
   )
)</formula>
    <label>Grupo de Material</label>
    <type>Text</type>
</CustomField>