force-app/main/default/objects/SurveyProduct__c/fields/MaxPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>MaxPriceNmb__c</fullName>
    <label>Preço Máximo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>