force-app/main/default/objects/SurveyProduct__c/fields/MinPriceNmb__c.field-meta.xml
<CustomField>
    <fullName>MinPriceNmb__c</fullName>
    <label>Preço Mínimo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>