force-app/main/default/objects/SurveyProduct__c/fields/OtherMaterialGroupTxt__c.field-meta.xml
<CustomField>
    <fullName>OtherMaterialGroupTxt__c</fullName>
    <label>Outros - Grupo de Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MaterialsGroup</valueSetName>
    </valueSet>
</CustomField>