force-app/main/default/objects/SurveyProduct__c/fields/OtherProductsTxt__c.field-meta.xml
<CustomField>
    <fullName>OtherProductsTxt__c</fullName>
    <label>Outros produtos</label>
    <length>50</length>
    <type>Text</type>
</CustomField>