force-app/main/default/objects/SurveyProduct__c/fields/OtherSubsystemTxt__c.field-meta.xml
<CustomField>
    <fullName>OtherSubsystemTxt__c</fullName>
    <label>Outros - Subsistema</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subsystem</valueSetName>
    </valueSet>
</CustomField>