force-app/main/default/objects/SurveyProduct__c/fields/ProductDescriptionFml__c.field-meta.xml
<CustomField>
    <fullName>ProductDescriptionFml__c</fullName>
    <formula>IF(ProductLkp__c != null, ProductLkp__r.Name, OtherProductsTxt__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Descrição do Produto</label>
    <type>Text</type>
</CustomField>