force-app/main/default/objects/SurveyProduct__c/fields/ProductLkp__c.field-meta.xml
<CustomField>
    <fullName>ProductLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produtos da Pesquisa</relationshipLabel>
    <relationshipName>Produtos_da_Pesquisa</relationshipName>
    <type>Lookup</type>
</CustomField>