force-app/main/default/objects/SurveyProduct__c/fields/SubsystemFml__c.field-meta.xml
<CustomField>
    <fullName>SubsystemFml__c</fullName>
    <formula>IF(TEXT(ProductLkp__r.ProductSubsystemTxt__c) != null, TEXT(ProductLkp__r.ProductSubsystemTxt__c), TEXT(OtherSubsystemTxt__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subsistema</label>
    <type>Text</type>
</CustomField>