force-app/main/default/objects/SurveyProduct__c/fields/TradeMktSurveyLkp__c.field-meta.xml
<CustomField>
    <fullName>TradeMktSurveyLkp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pesquisa de Preço</label>
    <referenceTo>TradeMktSurvey__c</referenceTo>
    <relationshipLabel>Produtos da Pesquisa</relationshipLabel>
    <relationshipName>Produtos_da_Pesquisa</relationshipName>
    <type>Lookup</type>
</CustomField>