force-app/main/default/objects/SurveyProduct__c/validationRules/ActiveTradeMktSurvey.validationRule-meta.xml
<ValidationRule>
    <fullName>ActiveTradeMktSurvey</fullName>
    <active>true</active>
    <errorConditionFormula>TradeMktSurveyLkp__r.IsActiveBln__c == TRUE &amp;&amp;
(ISNEW() || ISCHANGED(ProductLkp__c)||ISCHANGED(OtherProductsTxt__c)
||ISCHANGED(OtherMaterialGroupTxt__c))</errorConditionFormula>
    <errorMessage>Não é possível adicionar ou alterar um produto de uma Pesquisa de Trade Marketing ativa.</errorMessage>
</ValidationRule>