force-app/main/default/objects/SurveyProduct__c/validationRules/MaxMinPriceComparison.validationRule-meta.xml
<ValidationRule>
    <fullName>MaxMinPriceComparison</fullName>
    <active>true</active>
    <errorConditionFormula>MaxPriceNmb__c &lt; MinPriceNmb__c || 
MaxPriceNmb__c &lt; 0 || 
MinPriceNmb__c &lt; 0</errorConditionFormula>
    <errorMessage>Defina valores válidos para os preços mínimo e máximo do produto.</errorMessage>
</ValidationRule>