force-app/main/default/objects/SurveyProduct__c/validationRules/ProductSelection.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductSelection</fullName>
    <active>true</active>
    <errorConditionFormula>(ProductLkp__c != null &amp;&amp;  OtherProductsTxt__c != null) ||
(ProductLkp__c != null &amp;&amp; TEXT(OtherMaterialGroupTxt__c) != null) ||
(ProductLkp__c != null &amp;&amp; TEXT(OtherSubsystemTxt__c) != null) || 
(ProductLkp__c == null &amp;&amp;  OtherProductsTxt__c == null)</errorConditionFormula>
    <errorMessage>Preencha apenas o campo &quot;Produto&quot; com um produto Mexichem ou os campos &quot;Outros Produtos&quot;, &quot;Outros - Grupo de Material&quot; e &quot;Outros - Subsistema&quot; referenciando um produto externo.</errorMessage>
</ValidationRule>